--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,6 +70,7 @@ import { stackCollections, projectCollections } from "@/data/constants";
             <ProjectCard
                 title={project.title}
                 image={project.image}
+                description={project.description}
                 techs={project.techs}
              />)
         }
